--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         <img class="img-responsive" src="img/profile.png" alt="profile-pic" />
         <div class="intro-text">
           <span class="name">{{ site.title }}</span>
-          <hr class="fa-duotone fa-palette" />
+          <hr class="fa-palette" />
           <span class="skills">{{ site.skills }}</span>
         </div>
       </div>
