--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,18 +9,13 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+        <p>Hi! I'm Kayla Liu! I REALLY love art! I wanted to make my own portfolio 
+          to share and present my art. I like doing digital art, little doodles, and 
+          random drawings when I am bored.</p>
       </div>
       <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-      </div>
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
-        </a>
+        <p>I also LOVE dogs, having one Maltese at home 
+          named Mellow. (She is SOOOOO mellow!) Anyways, I would love to show my art to you! </p>
       </div>
     </div>
   </div>
