--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,13 +9,11 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Hi! I'm Kayla Liu! I REALLY love art! I wanted to make my own portfolio 
-          to share and present my art. I like doing digital art, little doodles, and 
-          random drawings when I am bored.</p>
+        <p>Hi! I'm Kayla Liu! I'm a freshman in high school and I love making random edits on Capcut and cute doodles on Procreate.</p>
       </div>
       <div class="col-lg-4">
         <p>I also LOVE dogs, having one Maltese at home 
-          named Mellow. (She is SOOOOO mellow!) Anyways, I would love to show my art to you! </p>
+          named Mellow. I  have one sister and one brother (I'm the oldest 😁). Anyways, I would love to show my art to you! </p>
       </div>
     </div>
   </div>
